--- a/Style/title.css
+++ b/Style/title.css
@@ -19,7 +19,7 @@
 
 .layer {
   width: 100%;
-  height: 100%;
+  height: auto;
   position: absolute;
   transform-style: preserve-3d;
   animation: ಠ_ಠ 5s infinite alternate ease-in-out -7.5s;
@@ -146,5 +146,40 @@
 @keyframes ಠ_ಠ {
   100% {
     transform: rotateY(-40deg) rotateX(-43deg);
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .layer:after {
+    font: 3em/0.65 "Pacifico", "Kaushan Script", Futura, "Roboto",
+      "Trebuchet MS", Helvetica, sans-serif;
+    content: "Merry\a      Christmas!";
+    white-space: pre;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 100px;
+    color: whitesmoke;
+    letter-spacing: -2px;
+    text-shadow: 4px 0 10px rgba(0, 0, 0, 0.13);
+  }
+
+  .stage {
+    height: 200px;
+    width: 300px;
+    margin: 20% 12%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    perspective: 9999px;
+    transform-style: preserve-3d;
+  }
+
+  .title {
+    margin: 0;
+    background: radial-gradient(circle, #ba0b0b, #571a1a, #1b2949, #000);
+    height: 50vh;
   }
 }
