--- a/Style/style.css
+++ b/Style/style.css
@@ -80,6 +80,20 @@ body {
 }
 
 @media only screen and (max-width: 767px) {
+  body {
+    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+      url("../Images/bg-image-mobile.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    font-family: "Amiri", serif;
+    color: rgb(211, 211, 211);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
   .container {
     text-align: center;
     width: 350px;
