--- a/Style/style.css
+++ b/Style/style.css
@@ -85,6 +85,7 @@ body {
       url("../Images/bg-image-mobile.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
+    background-size: cover;
     font-family: "Amiri", serif;
     color: rgb(211, 211, 211);
     display: flex;
